fixing body overflow

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -17,6 +17,11 @@ body {
   width: 100%;
   height: 100vh;
   background-color: $blue-dark;
+  overflow: hidden;
+
+  @include responsive() {
+    overflow-y: auto;
+  }
 }
 
 img, svg {
